examples, remove unneeded

--- a/example.env
+++ b/example.env
@@ -1,18 +1,5 @@
 NODE_ENV=development
-DEBUG=myapp:services
-LOG_LEVEL=debug
-SLACK_WEBHOOK_URL=
+DEBUG=lesson*
 
-# AWS config settings
-AWS_REGION=us-east-1
-
-# Connected Applications
-# AUTOTASK_API_USER=
-# AUTOTASK_API_SECRET=
-# AUTOTASK_INTEGRATION_CODE=
-
-# ZENDESK_EMAIL=
-# ZENDESK_API_TOKEN=
-# ZENDESK_SUBDOMAIN=
-
-# etc.
+# The Lambdas will log messages to a Slack channel if you have an inbound webhook configured...
+#SLACK_WEBHOOK_URL=
